package structuration.proxy.eni;

public interface Animation {
    void dessine();
    void clic();
}
